--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -534,6 +534,8 @@
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-master-detail-report-use-detail-report-bands.md   
       - name: Create a Master-Detail Report (Use Subreports)
         href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-master-detail-report-use-subreports.md
+      - name: Create a Report with PDF Content
+        href: articles/report-designer/report-designer-for-winforms/create-popular-reports/create-a-report-with-pdf-content.md
       - name: Create a Hierarchical Report
         href: articles\report-designer\report-designer-for-winforms\create-popular-reports\create-a-hierarchical-report.md         
       - name: Create a Vertical Report
