--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -200,6 +200,21 @@
     href: articles/filter-editor/change-conditions-in-filter-editor.md
   - name: Delete Conditions
     href: articles/filter-editor/delete-conditions-in-filter-editor.md 
+- name: Gantt
+  href: articles/gantt.md
+  items:
+  - name: Context Menu
+    href: articles/gantt/context-menu.md
+  - name: Toolbar
+    href: articles/gantt/toolbar.md
+  - name: Data Editing
+    items:
+    - name: Add, Edit and Delete Tasks
+      href: articles/gantt/data-editing/modify-tasks.md
+    - name: Add and Delete Dependencies
+      href: articles/gantt/data-editing/modify-dependencies.md
+    - name: Add, Edit and Delete Resources
+      href: articles/gantt/data-editing/modify-resources.md
 - name: Grid
   href: articles/grid.md
   items:
