--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -819,16 +819,18 @@
       - name: Use Report Parameters
         href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters.md
         items:
-        - name: Parameters Overview
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/parameters-overview.md
-        - name: Multi-Value and Cascading Parameters
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/multi-value-and-cascading-parameters.md
-        - name: Date Range Parameters
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/date-range-parameters.md
-        - name: Request and Pass Report Parameter Values
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/request-and-pass-report-parameter-values.md
-        - name: Query Parameters
-          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/query-parameters.md
+      - name: Create a Report Parameter
+        href: articles/report-designer/shape-report-data/use-report-parameters/create-a-report-parameter.md
+      - name: Report Parameters with Predefined Static Values
+        href: articles/report-designer/shape-report-data/use-report-parameters/report-parameters-with-predefined-static-values.md
+      - name: Report Parameters with Predefined Dynamic Values
+        href: articles/report-designer/shape-report-data/use-report-parameters/report-parameters-with-predefined-dynamic-values.md
+      - name: Multi-Value Report Parameters
+        href: articles/report-designer/shape-report-data/use-report-parameters/multi-value-report-parameters.md
+      - name: Cascading Report Parameters
+        href: articles/report-designer/shape-report-data/use-report-parameters/cascading-report-parameters.md
+      - name: Date Range Report Parameters
+        href: articles/report-designer/shape-report-data/use-report-parameters/date-range-report-parameters.md
     - name: Lay out Dynamic Report Content
       href: articles/report-designer/report-designer-for-winforms/lay-out-dynamic-report-content.md
       items:
