--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -488,9 +488,11 @@
       href: articles/report-designer/report-designer-for-winforms/bind-to-data.md
       items:
       - name: Bind a Report to a Database
-        href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-a-database.md   
+        href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-a-database.md
       - name: Bind a Report to a Stored Procedure
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-a-stored-procedure.md
+      - name: Specify Query Parameters
+        href: articles/report-designer/report-designer-for-winforms/bind-to-data/specify-query-parameters.md
       - name: Bind a Report to an XML File
         href: articles/report-designer/report-designer-for-winforms/bind-to-data/bind-a-report-to-an-xml-file.md
       - name: Bind a Report to an Entity Framework Data Source
@@ -819,18 +821,18 @@
       - name: Use Report Parameters
         href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters.md
         items:
-      - name: Create a Report Parameter
-        href: articles/report-designer/shape-report-data/use-report-parameters/create-a-report-parameter.md
-      - name: Report Parameters with Predefined Static Values
-        href: articles/report-designer/shape-report-data/use-report-parameters/report-parameters-with-predefined-static-values.md
-      - name: Report Parameters with Predefined Dynamic Values
-        href: articles/report-designer/shape-report-data/use-report-parameters/report-parameters-with-predefined-dynamic-values.md
-      - name: Multi-Value Report Parameters
-        href: articles/report-designer/shape-report-data/use-report-parameters/multi-value-report-parameters.md
-      - name: Cascading Report Parameters
-        href: articles/report-designer/shape-report-data/use-report-parameters/cascading-report-parameters.md
-      - name: Date Range Report Parameters
-        href: articles/report-designer/shape-report-data/use-report-parameters/date-range-report-parameters.md
+        - name: Create a Report Parameter
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/create-a-report-parameter.md
+        - name: Report Parameters with Predefined Static Values
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/report-parameters-with-predefined-static-values.md
+        - name: Report Parameters with Predefined Dynamic Values
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/report-parameters-with-predefined-dynamic-values.md
+        - name: Multi-Value Report Parameters
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/multi-value-report-parameters.md
+        - name: Cascading Report Parameters
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/cascading-report-parameters.md
+        - name: Date Range Report Parameters
+          href: articles/report-designer/report-designer-for-winforms/shape-report-data/use-report-parameters/date-range-report-parameters.md
     - name: Lay out Dynamic Report Content
       href: articles/report-designer/report-designer-for-winforms/lay-out-dynamic-report-content.md
       items:
