--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -529,8 +529,6 @@
       href: articles/report-designer/bind-to-data/bind-a-report-to-json-data.md   
     - name: Bind a Report to an Object Data Source
       href: articles/report-designer/bind-to-data/bind-a-report-to-an-object-data-source.md   
-    - name: Data Binding Modes
-      href: articles/report-designer/bind-to-data/data-binding-modes.md
     - name: Bind Report Controls to Data (Expression Bindings)
       href: articles/report-designer/bind-to-data/bind-controls-to-data-expression-bindings.md
     - name: Bind Report Controls to Data (Data Bindings)
@@ -752,60 +750,41 @@
         href: articles/report-designer/shape-report-data/group-and-sort-data/group-data-by-a-custom-field.md 
       - name: Sort Groups by a Summary Function's Result
         href: articles/report-designer/shape-report-data/group-and-sort-data/sort-groups-by-a-summary-function-result.md   
-    - name: Shape Data (Expression Bindings)
-      href: articles/report-designer/shape-report-data/shape-data-expression-bindings.md
+    - name: Format Data
+      href: articles/report-designer/report-designer-for-winforms/shape-report-data/format-data.md
+    - name: Specify Conditions for Report Elements
+      href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements.md
       items:
-      - name: Format Data
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/format-data.md
       - name: Conditionally Change a Control's Appearance
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-control-appearance.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/conditionally-change-a-control-appearance.md
       - name: Conditionally Change a Label's Text
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-label-text.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/conditionally-change-a-label-text.md
       - name: Conditionally Change a Band's Visibility
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-change-a-bands-vibility-expression-binding.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/conditionally-change-a-bands-visibility-expression-bindings.md
       - name: Conditionally Filter Report Data
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-filter-report-data.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/conditionally-filter-report-data.md
       - name: Conditionally Suppress Controls
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/conditionally-supress-controls.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/conditionally-supress-controls.md
       - name: Limit the Number of Records per Page
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/limit-the-number-of-records-per-page.md
-      - name: Calculate a Summary
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/calculate-a-summary.md
-      - name: Calculate an Advanced Summary
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/calculate-an-advanced-summary.md
-      - name: Display Row Numbers in a Report, Group or Page
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/display-row-numbers-in-a-report-group-or-page.md
-      - name: Count the Number of Records in a Report or Group
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/count-the-number-of-records-in-a-report-or-group.md
-      - name: Count the Number of Groups in a Report
-        href: articles/report-designer/shape-report-data/shape-data-expression-bindings/count-the-number-of-groups-in-a-report.md
-    - name: Shape Data (Data Bindings)
-      href: articles/report-designer/shape-report-data/shape-data-data-bindings.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/specify-conditions-for-report-elements/limit-the-number-of-records-per-page.md
+    - name: Calculate Summaries
+      href: articles/report-designer/report-designer-for-winforms/shape-report-data/calculate-summaries.md
       items:
-      - name: Format Data
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/format-data.md
-      - name: Conditionally Change a Control's Appearance
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-control-appearance.md
-      - name: Conditionally Change a Label's Text
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-label-text.md
-      - name: Conditionally Change a Band's Visibility 
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-change-a-bands-visibility-data-binding.md
-      - name: Conditionally Filter Report Data
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-filter-report-data.md
-      - name: Conditionally Suppress Controls
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/conditionally-supress-controls.md
-      - name: Limit the Number of Records per Page
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/limit-the-number-of-records-per-page.md
       - name: Calculate a Summary
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/calculate-a-summary.md
-      - name: Calculate a Custom Summary
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/calculate-a-custom-summary.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/calculate-a-summary.md
+      - name: Calculate a Weighted Average
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-data-bindings/calculate-a-weighted-average.md
+      - name: Calculate an Advanced Summary
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/shape-data-expression-bindings/calculate-an-advanced-summary.md
+    - name: Count Elements and Values
+      href: articles/report-designer/report-designer-for-winforms/shape-report-data/count-elements-and-values.md
+      items:
       - name: Display Row Numbers in a Report, Group or Page
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/display-row-numbers-in-a-report-group-or-page.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/count-elements-and-values/display-row-numbers-in-a-report-group-or-page.md
       - name: Count the Number of Records in a Report or Group
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/count-the-number-of-records-in-a-report-or-group.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/count-elements-and-values/count-the-number-of-records-in-a-report-or-group.md
       - name: Count the Number of Groups in a Report
-        href: articles/report-designer/shape-report-data/shape-data-data-bindings/count-the-number-of-groups-in-a-report.md
+        href: articles/report-designer/report-designer-for-winforms/shape-report-data/count-elements-and-values/count-the-number-of-groups-in-a-report.md
     - name: Use Calculated Fields
       href: articles/report-designer/shape-report-data/use-calculated-fields.md
       items:
@@ -891,6 +870,8 @@
     items:
     - name: Expression Syntax
       href: articles/report-designer/use-expressions/expression-syntax.md
+    - name: Data Binding Modes
+      href: articles/report-designer/use-expressions/data-binding-modes.md
   - name: Localize Reports
     href: articles/report-designer/localize-reports.md
   - name: Preview, Print and Export Reports
