richedit - table wrapping

--- a/interface-elements-for-desktop/toc.yml
+++ b/interface-elements-for-desktop/toc.yml
@@ -1325,7 +1325,7 @@
       href: articles/rich-text-editor/tables/set-background-color-of-cells.md
     - name: Set Table Properties
       href: articles/rich-text-editor/tables/set-table-properties.md
-    - name: Set Table Properties
+    - name: Wrap Text Around a Table
       href: articles/rich-text-editor/tables/wrap-text-around-a-table.md
   - name: Header and Footer
     href: articles/rich-text-editor/header-and-footer.md
