Rename bar code -> barcode

--- a/interface-elements-for-web/toc.yml
+++ b/interface-elements-for-web/toc.yml
@@ -622,12 +622,12 @@
         href: articles/report-designer/use-report-elements/use-tables/manipulate-table-elements.md
       - name: Hide Table Cells
         href: articles/report-designer/use-report-elements/use-tables/hide-table-cells.md
-    - name: Use Bar Codes
+    - name: Use Barcodes
       href: articles/report-designer/use-report-elements/use-bar-codes.md
       items:
-      - name: Add Bar Codes to a Report
+      - name: Add Barcodes to a Report
         href: articles/report-designer/use-report-elements/use-bar-codes/add-bar-codes-to-a-report.md
-      - name: Bar Code Recognition Specifics
+      - name: Barcode Recognition Specifics
         href: articles/report-designer/use-report-elements/use-bar-codes/bar-code-recognition-specifics.md
       - name: Codabar
         href: articles/report-designer/use-report-elements/use-bar-codes/codabar.md
