Rename Save/Open a Dashboard

--- a/dashboard-for-desktop/toc.yml
+++ b/dashboard-for-desktop/toc.yml
@@ -487,8 +487,8 @@
     href: articles/dashboard-designer/undo-and-redo-operations.md
   - name: Automatic and Manual Updates
     href: articles/dashboard-designer/automatic-and-manual-updates.md
-  - name: Saving a Dashboard
-    href: articles/dashboard-designer/saving-a-dashboard.md
+  - name: Save a Dashboard
+    href: articles/dashboard-designer/save-a-dashboard.md
   - name: Printing and Exporting
     href: articles/dashboard-designer/printing-and-exporting.md
   - name: UI Elements
